Main page is done

--- a/src/SASS/abstracts/_variables.scss
+++ b/src/SASS/abstracts/_variables.scss
@@ -2,8 +2,10 @@
   --primary-color: #121212;
   --secondary-color: #222;
   --tertiary-color: #333;
-  --dark-gray: #444;
-  --light-gray: #444;
+  --dark-gray-1: #444;
+  --dark-gray-2: #555;
+  --dark-gray-3: #666;
+  --light-gray: #c4c4c4;
 
   --heading-1: 9.6rem;
   --heading-2: 6rem;
