--- a/src/SASS/main.scss
+++ b/src/SASS/main.scss
@@ -5,7 +5,12 @@
 
 //base
 @import "./base/base";
+@import "./base/util";
 
 //components
 @import "./components/headings";
 @import "./components/btn";
+
+//layout
+@import "./layout/nav";
+@import "./layout/header";
