--- a/src/SASS/main.scss
+++ b/src/SASS/main.scss
@@ -10,7 +10,10 @@
 //components
 @import "./components/headings";
 @import "./components/btn";
+@import "./components/project";
 
 //layout
 @import "./layout/nav";
 @import "./layout/header";
+@import "./layout/about";
+@import "./layout/projects";
