--- a/src/SASS/base/_base.scss
+++ b/src/SASS/base/_base.scss
@@ -14,6 +14,11 @@ body {
   line-height: 1.6;
   font-family: "Ubuntu", sans-serif;
 }
+::-moz-selection,
+::selection {
+  background: var(--primary-color);
+  color: #fff;
+}
 input::-moz-focus-inner {
   border: 0;
 }
@@ -36,6 +41,4 @@ ul {
 }
 
 main {
-  position: relative;
-  height: 100vh;
 }
