Desktop version is finished

--- a/src/SASS/base/_base.scss
+++ b/src/SASS/base/_base.scss
@@ -16,7 +16,7 @@ body {
 }
 ::-moz-selection,
 ::selection {
-  background: var(--primary-color);
+  background: var(--tertiary-color);
   color: #fff;
 }
 input::-moz-focus-inner {
