--- a/src/SASS/components/_btn.scss
+++ b/src/SASS/components/_btn.scss
@@ -6,6 +6,8 @@
   padding: 1rem 2rem;
   border-radius: 5px;
   transition: 200ms ease;
+  border: none;
+  background: transparent;
   &--primary {
     background-color: var(--primary-color);
 
@@ -47,5 +49,12 @@
   &:focus,
   &:hover {
     margin-bottom: 0.4em;
+  }
+
+  &--contact {
+    margin: 0;
+    padding: 0;
+
+    margin-top: 2.5em;
   }
 }
