--- a/src/SASS/main.scss
+++ b/src/SASS/main.scss
@@ -17,3 +17,5 @@
 @import "./layout/header";
 @import "./layout/about";
 @import "./layout/projects";
+@import "./layout/contact";
+@import "./layout/footer";
