--- a/src/SASS/components/_btn.scss
+++ b/src/SASS/components/_btn.scss
@@ -9,11 +9,12 @@
   border: none;
   background: transparent;
   cursor: pointer;
+
   &--primary {
-    background-color: var(--primary-color);
+    background-color: var(--secondary-color);
 
     a {
-      color: #fff;
+      color: var(--bg);
     }
 
     &:hover,
@@ -24,15 +25,16 @@
   }
   &--secondary {
     background: transparent;
-    color: var(--primary-color);
-    border: 1px solid currentColor;
+
+    border: 1px solid var(--tertiary-color);
 
     &:hover,
     &:focus-within,
     &:focus {
       background: var(--primary-color);
+
       a {
-        color: #fff;
+        color: var(--bg) !important;
       }
     }
   }
@@ -50,16 +52,18 @@
     transition: 200ms ease;
   }
 
-  &:focus-within,
-  &:focus,
-  &:hover {
-    margin-bottom: 0.4em;
-  }
-
   &--contact {
     margin: 0;
     padding: 0;
 
     margin-top: 2.5em;
+  }
+
+  &:focus-within,
+  &:focus,
+  &:hover {
+    a {
+      color: var(--light-gray);
+    }
   }
 }
