--- a/src/SASS/components/_headings.scss
+++ b/src/SASS/components/_headings.scss
@@ -3,6 +3,21 @@
   font-weight: 700;
   line-height: 1;
   color: var(--primary-color);
+
+  @media (max-width: $bp-medium) {
+    font-size: 8.6rem;
+  }
+
+  @media (max-width: $bp-small) {
+    font-size: 7.9rem;
+  }
+  @media (max-width: $bp-smallest) {
+    font-size: 5.9rem;
+  }
+
+  @media (max-width: 340px) {
+    font-size: 5.3rem;
+  }
   &--contact {
     grid-column: 1 / -1;
   }
@@ -17,8 +32,20 @@
   font-size: 3.4rem;
   color: var(--tertiary-color);
   grid-column: 10 / -1;
+
+  @media (max-width: $bp-small) {
+    font-size: 3rem;
+  }
+
+  @media (max-width: 340px) {
+    font-size: 2.4rem;
+  }
 }
 
+.heading--5 {
+  font-size: 2.7rem;
+  color: var(--secondary-color);
+}
 .heading--6 {
   color: var(--light-gray);
   font-weight: 300;
@@ -37,5 +64,6 @@
 
 .logo {
   font-size: 2.5rem;
+  color: var(--primary-color);
   font-weight: var(--secondary-color);
 }
