--- a/src/SASS/layout/_contact.scss
+++ b/src/SASS/layout/_contact.scss
@@ -7,5 +7,13 @@
   &__detail {
     margin-top: 5em;
     grid-column: 4 / span 6;
+
+    @media (max-width: $bp-small) {
+      grid-column: 2 / -1;
+    }
+
+    @media (max-width: $bp-smallest) {
+      grid-column: 1 /-1;
+    }
   }
 }
