--- a/src/SASS/layout/_nav.scss
+++ b/src/SASS/layout/_nav.scss
@@ -1,16 +1,33 @@
 .nav {
   padding-top: 1.8em;
+  width: 100%;
+  position: fixed;
+  top: 0;
+
+  background: var(--bg);
+  z-index: 1000;
+  max-width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 
   &__content {
     display: flex;
     align-items: center;
-    justify-content: space-between;
   }
 
   &__ul {
+    margin-left: auto;
     display: flex;
     align-items: center;
     transition: 200ms ease-in;
+
+    position: absolute;
+    right: 0;
+    width: 22%;
+    @media (max-width: $bp-medium) {
+      width: 30%;
+    }
   }
 
   &__li:not(:last-child) {
@@ -32,7 +49,7 @@
   &__link:hover,
   &__link:active,
   &__link:focus {
-    opacity: 0 0.4;
+    opacity: 0.4;
   }
   &__darktheme {
     display: flex;
