--- a/src/SASS/base/_base.scss
+++ b/src/SASS/base/_base.scss
@@ -22,6 +22,7 @@ body {
   line-height: 1.6;
   font-family: "Ubuntu", sans-serif;
   background: var(--bg);
+  margin-bottom: 2em;
 }
 ::-moz-selection,
 ::selection {
