--- a/src/SASS/components/_btn.scss
+++ b/src/SASS/components/_btn.scss
@@ -46,7 +46,7 @@
     padding: 0;
     margin: 0;
     position: absolute;
-    bottom: 1em;
+    bottom: 0;
     left: 50%;
     transform: translateX(-50%);
     transition: 200ms ease;
