--- a/src/SASS/components/_headings.scss
+++ b/src/SASS/components/_headings.scss
@@ -30,14 +30,11 @@
 }
 .heading--4 {
   font-size: 3.4rem;
+  font-weight: 700;
   color: var(--tertiary-color);
   grid-column: 10 / -1;
 
   @media (max-width: $bp-small) {
-    font-size: 3rem;
-  }
-
-  @media (max-width: 340px) {
     font-size: 2.4rem;
   }
 }
