--- a/src/SASS/layout/_header.scss
+++ b/src/SASS/layout/_header.scss
@@ -1,8 +1,8 @@
 .header {
-  padding-top: 14.5em;
+  padding-top: 10.5em;
   position: relative;
   min-height: 100vh;
-
+  transition: 2000ms ease-in;
   @media (max-width: $bp-small) {
     min-height: 80vh;
   }
