--- a/src/SASS/components/_btn.scss
+++ b/src/SASS/components/_btn.scss
@@ -46,10 +46,11 @@
     padding: 0;
     margin: 0;
     position: absolute;
-    bottom: 0;
+    bottom: 2em;
     left: 50%;
     transform: translateX(-50%);
     transition: 200ms ease;
+    font-weight: 700;
   }
 
   &--contact {
