--- a/src/SASS/components/_btn.scss
+++ b/src/SASS/components/_btn.scss
@@ -51,6 +51,10 @@
     transform: translateX(-50%);
     transition: 200ms ease;
     font-weight: 700;
+
+    @media (max-width: $bp-medium) {
+      bottom: 6em;
+    }
   }
 
   &--contact {
