--- a/src/SASS/base/_base.scss
+++ b/src/SASS/base/_base.scss
@@ -6,15 +6,22 @@
   box-sizing: border-box;
 }
 html {
-  font-size: 62.5%;
+  font-size: 70.5%;
   scroll-behavior: smooth;
 
+  @media (max-width: $bp-largest) {
+    font-size: 62.5%;
+  }
   @media (max-width: $bp-medium) {
     font-size: 50%;
   }
 
   @media (max-width: 340px) {
     font-size: 45%;
+  }
+
+  @media (min-width: 2000px) {
+    font-size: 70%;
   }
 }
 body {
